--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "node-sass": "^7.0.1",
     "nodemon": "^1.3.3"
+  },
+  "dependencies": {
+    "got": "^12.1.0"
   }
 }
