--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "glob-parent": "^6.0.2",
-    "got": "^12.1.0"
+    "got": "^12.1.0",
+    "scss-tokenizer": "^0.4.2"
   }
 }
